# allocadabra

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
app/: __init__.py
app/ai/: __init__.py  constants.py  context_selection.py  data_api.py  env.py  errors.py  model_registry.py  models.py  parsing.py  prompts.py  provider.py  schemas.py  session_hooks.py  validation.py
app/ingestion/: __init__.py  coingecko.py
app/processing/: __init__.py  artifacts.py  data_api.py  dataset.py  models.py  progress.py  runner.py  transformations.py
app/storage/: __init__.py  data_api.py  export_bundle.py  json_files.py  market_cache.py  paths.py  schemas.py  session_state.py  validation.py
app/utils/: __init__.py  logging.py
docs/: plan.md  tasks.md
docs/prompts/agents/: ai-perplexity-agent.md  backend-data-agent.md  frontend-agent.md  modelling-agent.md  orchestrator-agent-2.md  orchestrator-agent.md  product-ux-agent.md  qa-validation-agent.md
docs/prompts/briefs/: ai-perplexity-agent-1.md  ai-perplexity-agent-2.md  ai-perplexity-agent-3.md  (+22 more)
docs/validation/: ai-validation.md  backend-validation.md  frontend-validation.md  general-validation.md  modelling-validation.md  orchestrator-ai-live-review.md  validation-gap-report-1.md
frontend/: __init__.py  app.py  chat.py  configuration.py  constants.py  data.py  dev_tools.py  modelling.py  review.py  runtime.py  theme.py
scripts/: ai_smoke_extended.py  backend_modelling_handoff_smoke.py  backend_smoke.py  frontend_smoke.py  modelling_smoke.py  review_fixture_smoke.py
storage/cache/: .gitignore
(+21 files in other folders)
